# POSBattleshipVojKac

./: .gitignore  CMakeLists.txt  client.c  client.h  grid.c  grid.h  main.c  main.h  makefile  player.c  player.h  server.c
pos_sockets/: active_socket.c
